--- a/FinalProjectPSD/FinalProjectPSD.csproj
+++ b/FinalProjectPSD/FinalProjectPSD.csproj
@@ -90,12 +90,16 @@
       <LastGenOutput>MakeUpzzModel.cs</LastGenOutput>
     </Content>
     <Content Include="View\Admin\ViewCustomer.aspx" />
+    <Content Include="View\Customer\OrderMakeup.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Factory\CartFactory.cs" />
     <Compile Include="Factory\MakeupBrandFactory.cs" />
     <Compile Include="Factory\MakeupFactory.cs" />
     <Compile Include="Factory\MakeupTypeFactory.cs" />
+    <Compile Include="Factory\TransactionDetailFactory.cs" />
+    <Compile Include="Factory\TransactionHeaderFactory.cs" />
     <Compile Include="Factory\UserFactory.cs" />
     <Compile Include="Model\Cart.cs">
       <DependentUpon>MakeUpzzModel.tt</DependentUpon>
@@ -134,10 +138,13 @@
       <DependentUpon>MakeUpzzModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\CartRepository.cs" />
     <Compile Include="Repository\DataSingleton.cs" />
     <Compile Include="Repository\MakeupBrandRepository.cs" />
     <Compile Include="Repository\MakeupRepository.cs" />
     <Compile Include="Repository\MakeupTypeRepository.cs" />
+    <Compile Include="Repository\TransactionDetailRepository.cs" />
+    <Compile Include="Repository\TransactionHeaderRepository.cs" />
     <Compile Include="Repository\UserRepository.cs" />
     <Compile Include="View\Admin\ViewCustomer.aspx.cs">
       <DependentUpon>ViewCustomer.aspx</DependentUpon>
@@ -152,6 +159,13 @@
     </Compile>
     <Compile Include="View\Customer\CustomerNavbar.Master.designer.cs">
       <DependentUpon>CustomerNavbar.Master</DependentUpon>
+    </Compile>
+    <Compile Include="View\Customer\OrderMakeup.aspx.cs">
+      <DependentUpon>OrderMakeup.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="View\Customer\OrderMakeup.aspx.designer.cs">
+      <DependentUpon>OrderMakeup.aspx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
