--- a/FinalProjectPSD/FinalProjectPSD.csproj
+++ b/FinalProjectPSD/FinalProjectPSD.csproj
@@ -186,6 +186,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Controller\" />
     <Folder Include="Handle\" />
     <Folder Include="View\Guest\" />
   </ItemGroup>
