--- a/FinalProjectPSD/FinalProjectPSD.csproj
+++ b/FinalProjectPSD/FinalProjectPSD.csproj
@@ -98,6 +98,8 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controller\CartController.cs" />
+    <Compile Include="Controller\MakeupController.cs" />
     <Compile Include="Controller\UserController.cs" />
     <Compile Include="Factory\CartFactory.cs" />
     <Compile Include="Factory\MakeupBrandFactory.cs" />
@@ -106,6 +108,8 @@
     <Compile Include="Factory\TransactionDetailFactory.cs" />
     <Compile Include="Factory\TransactionHeaderFactory.cs" />
     <Compile Include="Factory\UserFactory.cs" />
+    <Compile Include="Handler\CartHandler.cs" />
+    <Compile Include="Handler\MakeupHandler.cs" />
     <Compile Include="Handler\UserHandler.cs" />
     <Compile Include="Model\Cart.cs">
       <DependentUpon>MakeUpzzModel.tt</DependentUpon>
